<resources>
    <string name="app_name">Uitgeleende Euro\'s</string>

<!--    OVERVIEW PAGE (ACTIVITY MAIN)-->
    <string name="overview">Overzicht</string>
    <string name="addCard">+</string>
    <string name="logout">Uitloggen</string>

<!--    LOGIN PAGE (ACTIVITY LOGIN)-->
    <string name="login">Inloggen</string>
    <string name="email">E-mail</string>
    <string name="password">Wachtwoord</string>
    <string name="errorMessage">Het wachtwoord of email is fout ingevuld.</string>
    <string name="register">Registreren</string>

<!--    REGISTER PAGE (ACTIVITY REGISTER)-->
    <string name="name">Naam</string>
    <string name="passwordConfirmation">Wachtwoord bevestigen</string>
    <string name="registerRegister">Registreren</string>

<!--    ADD CARD PAGE (ACTIVITY ADD CARD)-->
    <string name="newCard">Nieuwe lening</string>
    <string name="previousButton">Terug</string>
    <string name="titleNewCard">Titel</string>
    <string name="amount">Bedrag</string>
    <string name="firstName">Voornaam</string>
    <string name="lastName">Achternaam</string>
    <string name="phone">Telefoonnummer</string>
    <string name="description">Omschrijving</string>
    <string name="addButton">Toevoegen</string>

<!--    SHOW CARD PAGE  -->
    <string name="created">Aangemaakt op: </string>
    <string name="loaned"> Uitgeleend aan:</string>
    <string name="mobile">Telefoonnummer:</string>

<!--    CARD    -->
    <string name="moreInfo">Meer info</string>
    <string name="channel_name">notifycation</string>
    <string name="channel_description">loanAmount</string>

</resources>