<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="316dp"
        android:layout_height="579dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657">

        <Button
            android:id="@+id/RegisterButtonSubmit"
            android:layout_width="147dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:layout_marginBottom="12dp"
            android:text="@string/registerRegister" />

        <EditText
            android:id="@+id/InputRegisterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/InputRegisterPasswordConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/RegisterButtonSubmit"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginEnd="47dp"
            android:layout_marginRight="47dp"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/InputRegisterEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/InputRegisterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/InputRegisterPasswordConfirm"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="109dp"
            android:layout_marginRight="109dp"
            android:layout_marginBottom="12dp"
            android:text="@string/passwordConfirmation" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/InputRegisterPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="180dp"
            android:layout_marginRight="180dp"
            android:layout_marginBottom="12dp"
            android:text="@string/password" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/InputRegisterEmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="203dp"
            android:layout_marginRight="203dp"
            android:layout_marginBottom="12dp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/InputRegisterName"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="205dp"
            android:layout_marginRight="205dp"
            android:layout_marginBottom="12dp"
            android:text="@string/name" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:text="@string/register"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>