<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="299dp"
        android:layout_height="482dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonName3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginBottom="43dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="58dp"
            android:layout_above="@+id/registerButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="30dp"
            android:text="@string/login" />

<!--        MESSAGE IS HIDDEN-->
        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="13dp"
            android:text="@string/errorMessage"
            android:textColor="@color/red"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="96dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="157dp"
            android:layout_marginRight="157dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/email" />

        <TextView
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="121dp"
            android:layout_height="29dp"
            android:layout_above="@+id/inputPassword"
            android:layout_below="@+id/inputEmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="131dp"
            android:layout_marginRight="131dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/password" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/errorMessage"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="18dp"
            android:text="@string/register" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="111dp"
        android:layout_height="42dp"
        android:text="@string/login"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>